# stm32g4-fdcan

./: .gitignore  LICENSE  README.md
firmware/stm32cube/: .mxproject  Makefile  (+2 more)
firmware/stm32g4-fdcan-fw/: CMakeLists.txt
firmware/stm32g4-fdcan-fw/prj/stm32cubeide/: .cproject
firmware/stm32g4-fdcan-fw/prj/vscode/: stm32g4-fdcan.code-workspace
firmware/stm32g4-fdcan-fw/src/ap/: ap.cpp  ap.h  ap_def.h
firmware/stm32g4-fdcan-fw/src/ap/thread/: thread.cpp  thread.h
firmware/stm32g4-fdcan-fw/src/ap/thread/cmd/: cmd_thread.cpp  cmd_thread.h
firmware/stm32g4-fdcan-fw/src/ap/thread/cmd/driver/: cmd_uart.cpp  cmd_uart.h
firmware/stm32g4-fdcan-fw/src/ap/thread/cmd/process/: cmd_boot.cpp  cmd_boot.h
firmware/stm32g4-fdcan-fw/src/ap/thread/common/: cli.cpp  cli.h  cli_thread.cpp  cli_thread.h  event.cpp  event.h  led.cpp  led.h  led_thread.cpp  led_thread.h
firmware/stm32g4-fdcan-fw/src/ap/thread/manage/: can.cpp  can.h  mode.cpp  mode.h  rs485.cpp  rs485.h
firmware/stm32g4-fdcan-fw/src/ap/thread/mode/: can.h  mode.cpp  mode.h  mode_thread.cpp  mode_thread.h  rs485.cpp
firmware/stm32g4-fdcan-fw/src/bsp/: bsp.c  bsp.h
firmware/stm32g4-fdcan-fw/src/bsp/device/: stm32g4xx_hal_conf.h  stm32g4xx_it.c  stm32g4xx_it.h  system_stm32g4xx.c
firmware/stm32g4-fdcan-fw/src/bsp/ldscript/: STM32G431CBUx_BOOT.ld  STM32G431CBUx_FLASH.ld
firmware/stm32g4-fdcan-fw/src/common/: def.h  err_code.h
firmware/stm32g4-fdcan-fw/src/common/hw/include/: can.h  cdc.h  cli.h  cmd.h  encoder.h  fault.h  fmc.h  log.h  pwm.h  resize.h  sai.h  sd.h  spi.h  swtimer.h  uart.h
firmware/stm32g4-fdcan-fw/src/common/hw/include/dxl/: dxl_uart.h
firmware/stm32g4-fdcan-fw/src/common/hw/include/lcd/: st7789_regs.h
firmware/stm32g4-fdcan-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/stm32g4-fdcan-fw/src/hw/driver/: button.c  can.c  cdc.c  eeprom.c  fs.c  led.c  log.c  reset.c  spi.c  spi_flash.c  swtimer.c  uart.c
firmware/stm32g4-fdcan-fw/src/hw/driver/eeprom/: eeprom_emul_conf.h
firmware/stm32g4-fdcan-fw/src/hw/driver/usb/: usb.c  usb.h  usbd_conf.c  usbd_conf.h
firmware/stm32g4-fdcan-fw/src/hw/driver/usb/usb_cdc/: usbd_cdc.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_desc.h
firmware/stm32g4-fdcan-fw/src/lib/EEPROM_Emul/Core/: eeprom_emul.c  eeprom_emul.h  eeprom_emul_conf_template.h  eeprom_emul_types.h
firmware/stm32g4-fdcan-fw/src/lib/EEPROM_Emul/Porting/STM32G4/: flash_interface.c  flash_interface.h
firmware/stm32g4-fdcan-fw/src/lib/STM32G4xx_HAL_Driver/: Release_Notes.html
firmware/stm32g4-fdcan-fw/tools/mac/: fdcan-loader
software/fdcan-loader/: CMakeLists.txt  LICENSE  README.md
software/fdcan-loader/src/ap/: ap.cpp  ap.h  ap_def.h
software/fdcan-loader/src/ap/thread/audio/: audio.cpp  audio.h  audio_def.h
software/fdcan-loader/src/ap/thread/boot/: boot.cpp  boot.h
software/fdcan-loader/src/bsp/: bsp.c  bsp.h
software/fdcan-loader/src/common/: def.h  err_code.h
software/fdcan-loader/src/common/hw/include/: cli.h  cmd.h  uart.h
software/fdcan-loader/src/hw/: hw.h  hw_def.h
software/fdcan-loader/src/hw/driver/: cli.c  cmd.c  uart_posix.c  uart_win.c
software/fdcan-loader/src/lib/ez_socket/include/: ez_cfg.h  ez_def.h  ez_error.h  ez_hal.h  ez_log.h  ez_qbuffer.h  ez_socket.h  ez_utils.h
software/fdcan-loader/src/lib/ez_socket/src/: ez_log.cpp  ez_qbuffer.cpp  ez_socket.cpp  ez_utils.cpp
(+110 files in other folders)
